fix ancii can't view on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -112,6 +112,7 @@ code {
     border: 1px solid $grey-color-light;
     border-radius: 3px;
     background-color: #eef;
+    word-wrap: normal !important;
 }
 
 code {
